# edge-spec

./: .gitignore  README.md  environment.yml  method.md  pyproject.toml
code/: AGENTS.md  README.md  pyproject.toml  requirements.txt
code/configs/: balanced_drafter.yaml  combined_strong_heterogeneous.yaml  default.yaml  dynamic_heterogeneous.yaml  homogeneous.yaml  network_heterogeneous.yaml
code/docs/: README.md  baseline_contract.md  baseline_implementation_plan.md  baseline_semantic_audit.md  baseline_status.md  dip_sd_reproduction_spec.md  experiment.md  experiment_analysis_20260611-153652.md  experiment_resource_contract.md  latest_experiment_analysis.md  metric.md
code/scripts/: __init__.py  audit_experiment_config.py  baseline_trace.py  check_drafter_residency.py  collect_experiment_environment.py  profile_target_verification_latency.py  progress.py  push.sh  real_model_smoke.py  run.sh  run_all.py  run_baseline_performance_eval.py  run_baseline_preflight.sh  run_baseline_trace.sh  run_real_model_smoke.sh  run_sensitivity_lanes.py  run_sensitivity_w.py  summarize_baseline_performance_eval.py  verify_baseline_preflight.py  verify_baseline_rebuild.sh
code/src/: __init__.py  async_verification.py  communication.py  config.py  dip_sd.py  dssd_oracle.py  edge_compute.py  entities.py  events.py  latency.py  methods.py  metrics.py  model_runner.py  scheduler.py  semantic_oracle.py  simulator.py  tree_drafting.py  verification_latency_profile.py  workload.py
code/tests/: common.py  test_async_speculative_config.py  test_async_verification_channels.py  (+46 more)
(+84 files in other folders)
